--- a/index.css
+++ b/index.css
@@ -6,31 +6,30 @@ body {
     text-align: center;
 }
 
-#coolMenu,
-#coolMenu ul {
-    list-style: none;
-}
+/* Main menu
+------------------------------------------*/
 #coolMenu {
-    float: top;
+    font-family: Arial;
+    font-size: 12px;
+    background: #2f8be8;
 }
-#coolMenu > li {
-    float: left;
+#coolMenu > li > a {
+    color: #fff;
+    font-weight: bold;
 }
-#coolMenu li a {
-display: block;
-    height: 2em;
-    line-height: 2em;
-    padding: 0 1.5em;
-    text-decoration: none;
+#coolMenu > li:hover > a {
+    background: #f09d28;
+    color: #000;
 }
+
+/* Submenu
+------------------------------------------*/
 #coolMenu ul {
-    position: absolute;
-    display: none;
-z-index: 999;
+    background: #f09d28;
 }
 #coolMenu ul li a {
-    width: 80px;
+    color: #000;
 }
-#coolMenu li:hover ul {
-    display: block;
+#coolMenu ul li:hover a {
+    background: #ffc97c;
 }
