--- a/index.css
+++ b/index.css
@@ -6,30 +6,31 @@ body {
     text-align: center;
 }
 
-/* Main menu
-------------------------------------------*/
-#coolMenu {
-    font-family: Arial;
-    font-size: 12px;
-    background: #2f8be8;
-}
-#coolMenu > li > a {
-    color: #fff;
-    font-weight: bold;
-}
-#coolMenu > li:hover > a {
-    background: #f09d28;
-    color: #000;
-}
-
-/* Submenu
-------------------------------------------*/
+#coolMenu,
 #coolMenu ul {
-    background: #f09d28;
+    list-style: none;
+}
+#coolMenu {
+    float: left;
+}
+#coolMenu > li {
+    float: left;
+}
+#coolMenu li a {
+display: block;
+    height: 2em;
+    line-height: 2em;
+    padding: 0 1.5em;
+    text-decoration: none;
+}
+#coolMenu ul {
+    position: absolute;
+    display: none;
+z-index: 999;
 }
 #coolMenu ul li a {
-    color: #000;
+    width: 80px;
 }
-#coolMenu ul li:hover a {
-    background: #ffc97c;
+#coolMenu li:hover ul {
+    display: block;
 }
