--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     text-align: center;
 }
 
-#coolMenu,
+/*#coolMenu,
 #coolMenu ul {
     list-style: none;
 }
@@ -26,11 +26,39 @@ display: block;
 #coolMenu ul {
     position: absolute;
     display: none;
-z-index: 999;
+    z-index: 999;
 }
 #coolMenu ul li a {
     width: 80px;
 }
 #coolMenu li:hover ul {
     display: block;
+}*/
+
+/* Main menu
+------------------------------------------*/
+#coolMenu {
+    font-family: Arial;
+    font-size: 12px;
+    background: #2f8be8;
+}
+#coolMenu > li > a {
+    color: #fff;
+    font-weight: bold;
+}
+#coolMenu > li:hover > a {
+    background: #f09d28;
+    color: #000;
+}
+
+/* Submenu
+------------------------------------------*/
+#coolMenu ul {
+    background: #f09d28;
+}
+#coolMenu ul li a {
+    color: #000;
+}
+#coolMenu ul li:hover a {
+    background: #ffc97c;
 }
