--- a/index.css
+++ b/index.css
@@ -43,6 +43,9 @@ display: block;
     background: #2f8be8;
     float: left;
 }
+#coolMenu > li {
+    float: left;
+}
 #coolMenu > li > a {
     color: #fff;
     font-weight: bold;
