--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
-    background-color: lightblue;
+    background-color: #E7F27A; /*YELLOW*/
+
 }
 
 .banner{
@@ -27,10 +28,8 @@ body {
 .homepic{
   border-radius: 50px;
   border: 2px solid #000000;
-  /*padding: 20px;*/
-  width: 200px;
-  height: 150px;
-
+  width: 260px;
+  height: 180px;
 }
 
 li {
@@ -41,4 +40,5 @@ a {
     display: block;
     padding: 8px;
     background-color: #dddddd;
+    border: 2px solid #000000;
 }
